<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.florim.thirremjeshtrin.Request"
    android:background="@color/common_google_signin_btn_text_dark_disabled">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_login_bg"
            android:layout_marginTop="59dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/ic_image2vector"
                android:id="@+id/imageView2"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/logoDescription"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView2"
                android:id="@+id/txtRequest"
                android:gravity="center_horizontal"
                android:layout_alignStart="@+id/imageView2"
                android:textSize="24sp"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtRequest"
                    android:layout_alignParentStart="true"
                    android:id="@+id/btnAccept"
                    android:background="@color/btn_login"
                    android:text="@string/btnAccept"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:onClick="onAcceptClick"
                    android:layout_weight="0.5" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnRefuse"
                    android:background="@color/btn_logut_bg"
                    android:text="@string/btnRefuse"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:layout_alignBaseline="@+id/btnAccept"
                    android:layout_alignBottom="@+id/btnAccept"
                    android:layout_alignEnd="@+id/imageView2"
                    android:onClick="onRefuseClick"
                    android:layout_weight="0.5" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
